Part 1 of the assignment completed...

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,13 +7,35 @@ output:
 
 
 ## Loading and preprocessing the data
-
-
+```{r readData}
+df<- read.csv(unz("repdata-data-activity.zip", "activity.csv"), header=TRUE ,sep=",")
+df$DateField<-as.Date(df$date)
+df$Weekday<-weekdays(df$DateField)
+```
 
 ## What is mean total number of steps taken per day?
+Shown below is the histogram of the total number of steps taken per day.
+```{r createPlotSums}
+library(lattice)
+totalStepsByDate<-aggregate(df$steps, by=list(df$date),FUN=sum)
+names(totalStepsByDate)<-c("Date","Steps")
+barchart(Steps ~ Date, data=totalStepsByDate,
+            main="Total Number of Steps taken Daily",
+            ylab="Total number of steps", xlab="Date", 
+            scales = list(y=list(tick.number=6), 
+                          x=list(cex=0.6,tick.number=7,rot=80)
+                          )
+            )
+```
 
 
-
+```{r computeMeanAndMedian, results='hide'}
+meanPerDay<-mean(totalStepsByDate$Steps,na.rm = TRUE)
+medianPerDay<-median(totalStepsByDate$Steps,na.rm = TRUE)
+```
+The daily **mean** total number of the steps taken per day are **`r as.integer(meanPerDay)`** and the **median** total nuber of steps taken per day are **`r as.integer(medianPerDay)`**.
+```{r}
+```
 ## What is the average daily activity pattern?
 
 
