--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -41,10 +41,36 @@ meanPerDay<-mean(totalStepsByDate$Steps,na.rm = TRUE)
 medianPerDay<-median(totalStepsByDate$Steps,na.rm = TRUE)
 ```
 The daily **mean** total number of the steps taken per day are **`r as.integer(meanPerDay)`** and the **median** total nuber of steps taken per day are **`r as.integer(medianPerDay)`**.
-```{r}
-```
+
 ## What is the average daily activity pattern?
 
+1. Make a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r createPlotMeans}
+library(lattice)
+avgActivity<-aggregate(df$steps, by=list(df$interval),FUN=mean, na.rm=TRUE)
+names(avgActivity)<-c("Interval","Activity")
+yMax.y<-max(avgActivity$Activity)
+yMax.x<-avgActivity$Interval[which.max(avgActivity$Activity)]
+xyplot(Activity ~ Interval, data=avgActivity, type="l", 
+       main="Average activity over 5 minute intervals\n (Across all days)", 
+       xlab="Minutes", ylab="Average Activity (Number of Steps)",
+       panel=function(x,y,...){
+         panel.xyplot(x,y,...)
+         panel.abline(v =avgActivity$Interval[which.max(avgActivity$Activity)],col = "red", lwd = 2)
+         panel.text(x=yMax.x+700,y=yMax.y,labels=paste(c("Interval:",yMax.x),sep="", collapse=""))
+         panel.text(x=yMax.x+700,y=yMax.y-15,labels=paste(c("Activity:",format(yMax.y,digits=4)),sep="", collapse=""))
+         })
+```
+
+
+```{r printFig2, echo=FALSE, results='hide'}
+trellis.device(device = "png", filename="figures/Plot2-AverageActivityOver5MinIntervals.png",height=400, width=700)
+print(totalStepsPerDayPlot)
+dev.off()
+```
 
 
 ## Imputing missing values
